2004-03-26  John Luke  <jluke@cfl.rr.com>

	* Gui/Dialogs/SharpDevelopAboutPanels.cs:
	enable copy button for assembly version info
	fixes bug #55955

2004-03-25  Todd Berman  <tberman@sevenl.net>

	* Makefile.am:
	* Gui/HtmlControl/MozillaControl.cs:
	* Gui/BrowserDisplayBinding/HtmlViewPane.cs: updated for gecko-sharp

2004-03-25  Todd Berman  <tberman@sevenl.net>

	* Services/File/DefaultFileService.cs: adding a new method of external
	app launching based on gnome vfs stuff, works around broken gnome
	installs.

2004-03-21  John Luke  <jluke@cfl.rr.com>

	* Commands/ProjectBrowserCommands/FolderNodeCommands.cs:
	set the default of the FileSelector to ~/MonoDevelopProjects
	closes bug #55188

2004-03-21  Todd Berman  <tberman@sevenl.net>

	* Commands/FileCommands: fix bug #55869.

2004-03-21  Todd Berman  <tberman@sevenl.net>

	* Commands/VBConverter/ConvertProject.cs:
	* Commands/VBConverter/ConvertBuffer.cs: Changed to use new parser